--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@tarojs/taro": "^1.0.7",
     "@tarojs/taro-h5": "^1.0.7",
     "@tarojs/taro-weapp": "^1.0.7",
+    "lodash": "^4.17.11",
     "nervjs": "^1.3.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "taro-ui": "^1.3.5"
   },
