--- a/project.config.json
+++ b/project.config.json
@@ -4,12 +4,13 @@
 	"description": "todo-list",
 	"appid": "wx3381d91b259e012d",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": false,
 		"postcss": false,
 		"minified": false,
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
+	"libVersion": "2.3.2",
 	"condition": {}
 }
