--- a/package.json
+++ b/package.json
@@ -16,21 +16,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-
-    "@tarojs/async-await": "1.1.2",
-    "@tarojs/cli": "1.1.2",
-    "@tarojs/components": "1.1.2",
-    "@tarojs/redux": "1.1.2",
-    "@tarojs/router": "1.1.2",
-    "@tarojs/taro": "1.1.2",
-    "@tarojs/taro-h5": "1.1.2",
-    "@tarojs/taro-swan": "^1.1.2",
-    "@tarojs/taro-weapp": "1.1.2",
-    "@tarojs/webpack-runner": "1.1.2",
-    "@tarojs/redux-h5": "1.1.2",
-
-    "lodash": "^4.17.11",
+    "@tarojs/async-await": "^1.1.8",
+    "@tarojs/cli": "^1.1.8",
+    "@tarojs/components": "^1.1.8",
+    "@tarojs/redux": "^1.1.8",
+    "@tarojs/redux-h5": "^1.1.8",
+    "@tarojs/router": "^1.1.8",
+    "@tarojs/taro": "^1.1.8",
+    "@tarojs/taro-h5": "^1.1.8",
+    "@tarojs/taro-swan": "^1.1.8",
+    "@tarojs/taro-weapp": "^1.1.8",
+    "@tarojs/webpack-runner": "^1.1.8",
+    "moment": "^2.22.2",
     "nervjs": "^1.3.0",
+    "promise-polyfill": "^8.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1",
