--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 	"description": "todo-list",
 	"appid": "wx3381d91b259e012d",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": false,
 		"postcss": false,
 		"minified": false,
@@ -12,5 +12,31 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.2",
-	"condition": {}
+	"condition": {
+		"search": {
+			"current": -1,
+			"list": []
+		},
+		"conversation": {
+			"current": -1,
+			"list": []
+		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
+		"game": {
+			"list": []
+		},
+		"miniprogram": {
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "测试",
+					"pathName": "pages/index"
+				}
+			]
+		}
+	}
 }
