--- a/project.config.json
+++ b/project.config.json
@@ -32,9 +32,10 @@
 			"current": 0,
 			"list": [
 				{
-					"id": -1,
+					"id": 0,
 					"name": "测试",
-					"pathName": "pages/index"
+					"pathName": "pages/index",
+					"query": "path=/pages/userinfo/index&userId=29"
 				}
 			]
 		}
