--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tarojs/taro-swan": "^1.1.8",
     "@tarojs/taro-weapp": "^1.1.8",
     "@tarojs/webpack-runner": "^1.1.8",
+    "fundebug-wxjs": "^0.9.0",
     "moment": "^2.22.2",
     "nervjs": "^1.3.0",
     "promise-polyfill": "^8.1.0",
